@@ -4,6 +4,7 @@ OpenStopMotion Changelog
 0.6.5
   - Fixed ioctl sign-extension warnings
   - Fixed some compiler warnings about unused variables
+  - FreeBSD-Port: fixed tabwidth in Makefile from 4 to 8
 
 0.6.4 2013-04-18
   - added missing header include in arduino.cpp, fixed compiler error on
